--- a/OcelotGateway/Ocelot.GatewayProj/Properties/launchSettings.json
+++ b/OcelotGateway/Ocelot.GatewayProj/Properties/launchSettings.json
@@ -2,9 +2,9 @@
   "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:25334",
+      "applicationUrl": "http://10.1.72.24:25334",
       "sslPort": 44356
     }
   },
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://10.1.72.24:6000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
